# AneeshWiscProjects

Artificial_Neural_Networks/: Assignment2.ipynb
Artificial_Neural_Networks/FinalProject/: Snow_to_Sunny_WeatherWizard.ipynb
Big_Data/: Assignment1.ipynb  Assignment2.ipynb  Assignment3.ipynb
Big_Data/finalProject/: interestSort.csv
Big_Data/finalProject/.ipynb_checkpoints/: final-checkpoint.ipynb
CS200/ArrayListFun/src/: ArrayListFun.java  Counter.java  NumberList.java
CS200/Ch6ZyLab/src/: Calendar.java  DrawIsoscelesTriangle.java  DrawRightTriangle.java  Marbles.java
CS200/Ch7ZyLab/src/: BinaryToDecimal.java  MinMaxAvg.java  Rotate.java
CS200/RockPaperScissor/src/: Config.java  RockPaperScissors.java
CS200/Softmax/src/: Config.java  GradeAnalyzer.java
CS200/TeamLab/src/: Ages.java  ExerciseB.java  GPS.java  GameOfSticks.java  MessedUp.java  MysteryMethods.java  Palindrome.java  Quilt.java  oldAgeBegins.java
CS200/TeamLab10/src/: Candidate.java  CandidateApp.java  CandidateTester.java
CS200/Zylab10/src/: CommandLine.java  IntException.java
CS200/Zylab_Login/__zyLab_ Login and Signup, part 1/: Config.java  HelloFile.java  LoginAndSignup.java  userDB.txt
CS200/___zyLab_ Cipher (Required & Human Graded)/: key.txt  testkey.txt
CS200/___zyLab_ Cipher (Required & Human Graded)/src/: Cipher.java  TestCipher.java
CS200/__zyLab_ InputMethods (Required & Human Graded)/: InputMethods.java  TestInputMethods.java
CS200/m5/src/: Config.java  GuessingGame.java  UserAge.java
CS200/recursionTest/src/: Main.java
CS300/Assignment1/: ShoppingCart.html  ShoppingCartTester.html  allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  member-search-index.js  overview-tree.html  package-summary.html  package-tree.html  type-search-index.js
CS300/Assignment1/index-files/: index-1.html  index-10.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index-9.html
CS300/Assignment1/src/: Device.java  ShoppingCart.java  ShoppingCartTester.java
CS300/Assignment10/src/: Application.java  ApplicationIterator.java  ApplicationQueue.java  OpenPosition.java  OpenPositionTester.java  PriorityQueueADT.java
CS300/Assignment2/src/: Fountain.java
CS300/Assignment3/: file0.txt  file1.txt  file2.txt
CS300/Assignment3/src/: ExceptionalShoppingCart.java  ExceptionalShoppingCartTester.java
CS300/Assignment4/src/: AccessControl.java  AccessControlTester.java  User.java
CS300/Assignment5/clues/: treasureHunt.clues
CS300/Assignment5/src/: Button.java  Clickable.java  DraggableObject.java  DroppableObject.java  InteractiveObject.java  RestartGameButton.java  ScreenshotButton.java  TreasureHunt.java
CS300/Assignment6/src/: Course.java  ExamScheduler.java  ExamSchedulerTester.java  Room.java  Schedule.java
CS300/Assignment7/src/: BackwardSongIterator.java  ForwardSongIterator.java  LinkedNode.java  Song.java  SongPlayer.java  SongPlayerTester.java
CS300/Assignment8/src/: DNA.java  DNATester.java  Node.java  (+2 more)
CS400/Dessert/: pom.xml
CS400/cs400HTMLActivity/: Week11Activity.html
CS639_Parallel/HW1/: CMakeLists.txt  Laplacian.cpp
CS639_Parallel/HW2/LaplaceSolver_0_3/: CMakeLists.txt  ConjugateGradients.cpp  PointwiseOps.cpp  Reductions.cpp  Reductions.h  main.cpp
CS639_Parallel/HW3/LaplaceSolver_1_5/: CMakeLists.txt  ConjugateGradients.cpp  PointwiseOps.cpp  Reductions.cpp  main.cpp
CS639_Parallel/HW5/LaplacePARDISO_0_0/: CMakeLists.txt  DirectSolver.cpp
Machine Organization (IA-32)/SignalHandlingProject/: division  division.c  mySigHandler.c  sendsig  sendsig.c  sigHandler
Machine Organization (IA-32)/p1/: cipher.txt  decode.c  execfile_contents.txt  myfortune.txt
Machine Organization (IA-32)/p2/: !  board1.txt  board2.txt  board3.txt  board4.txt  board5.txt  board7.txt  board8.txt  check_board  check_board.c  check_board.i  check_board.s  check_boardx  objectfile_contents.txt  test  valgrind-out.txt
Machine Organization (IA-32)/p5/: s1  s1.solution  s1objdump  s2  s2.solution  s3  s3.solution  s3objdump  s4  s4.solution  s4objdump
(+262 files in other folders)
